# evidence-flow

./: .gitignore  AGENTS.md  README.md  pyproject.toml
contexts/examples/: generic_discovery_sessions.yaml  generic_handoff.yaml  generic_research_context.yaml  generic_tracks.yaml
contracts/: discovery_sessions.schema.json  domain_context.schema.json  handoff.schema.json  manifest.schema.json  search_plan.schema.json  source_inventory.schema.json  tracks.schema.json
docs/: architecture.md  contracts.md  roadmap.md
prompts/: README.md
skills/: README.md
src/evidence_flow/: __init__.py  __main__.py  cli.py
src/evidence_flow/adapters/: __init__.py
src/evidence_flow/adapters/browser/: __init__.py
src/evidence_flow/adapters/collectors/: __init__.py
src/evidence_flow/adapters/llm/: __init__.py
src/evidence_flow/adapters/renderers/: __init__.py
src/evidence_flow/adapters/search/: __init__.py
src/evidence_flow/agents/: __init__.py
src/evidence_flow/harness/: __init__.py  artifact_store.py  io.py  orchestrator.py  run_state.py  validators.py
src/evidence_flow/profiles/: __init__.py  base.py  discovery.py  enrich.py  filter_validate.py  handoff.py  rank_access.py  track_planner.py
tests/: test_contracts.py
